MANVIR SANDBOX/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Asst_Email__c</fullName>
        <label>Asst. Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Children_Names__c</fullName>
        <label>Children Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Authority__c</fullName>
        <inlineHelpText>Does the contact make buying decisions, influence those decisions or is just a user of the product or solution within the customer organisation</inlineHelpText>
        <label>Contact Authority</label>
        <picklist>
            <picklistValues>
                <fullName>Decision maker</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <inlineHelpText>Please enter the role of this contact</inlineHelpText>
        <label>Contact Role</label>
        <picklist>
            <picklistValues>
                <fullName>CTO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CXO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations - Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations - IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_status__c</fullName>
        <inlineHelpText>Is there an established relationship with this contact or is the contact still a target</inlineHelpText>
        <label>Contact Status</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Target</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Documents_Downloaded__c</fullName>
        <label>Documents Downloaded</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Interests__c</fullName>
        <label>Interests</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Rank__c</fullName>
        <label>Marketing Rank</label>
        <picklist>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opt_Out_AirGuard_AntiSpam_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a checkbox field to opt out of this campaign</description>
        <label>Opt Out - AirGuard AntiSpam Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opt_Out_Airgate_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a checkbox field to opt out of this campaign</description>
        <label>Opt Out - Airgate Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opt_Out_Mobile_Security_Anti_fraud__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt Out - Mobile Security/Anti-fraud</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference_Comments__c</fullName>
        <label>Reference Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referenceable__c</fullName>
        <label>Reference ability</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Spouse_Name__c</fullName>
        <label>Spouse Name</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
</CustomObject>